fix for text wrapping script

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -580,6 +580,22 @@ section.section {
 .hero-inner__title .outline-wrapper {
   position: relative;
 }
+.hero-inner__title .outline-wrapper .outline {
+  display: inline;
+  position: absolute;
+  top: -2%;
+  z-index: -10;
+  transform: translateX(67%);
+  width: fit-content;
+}
+@-moz-document url-prefix() {
+  .hero-inner__title .outline-wrapper .outline {
+    top: -9%;
+    right: -12%;
+    width: 123%;
+    transform: none;
+  }
+}
 .hero-inner__subtitle {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -600,21 +616,6 @@ section.section {
     width: 220px;
     font-size: 16px;
     line-height: 23px;
-  }
-}
-
-.outline {
-  display: inline;
-  position: absolute;
-  top: -5%;
-  right: -16%;
-  z-index: -10;
-}
-@-moz-document url-prefix() {
-  .outline {
-    top: -9%;
-    right: -12%;
-    width: 123%;
   }
 }
 
